# python1.0

./: 2019_conv.json  2019_conv.xlsx  2019_conv_details.xlsx  2019_conv_shanghai.xlsx  2019_conv_shanghai_history.json  2019_shanghai_details.xlsx  L3.key  L4.key  L5.key  L6.key  L7.key  L8.key  PythonWMA-II_Final.py  battery_price_final.py  conv.xlsx  conv_china.json  conv_china.xlsx  conv_china_latest.xlsx  conv_details.xlsx  conv_details_pandas.xlsx  conv_latest.xlsx  conv_oversea_latest.xlsx  conv_shanghai.xlsx  get_area_infos.py  happy_20_3_14.py  hello_world.py  hr.txt  hr_dpart.txt  it_dpart.txt  l2_homework.txt  l2_homework_report.txt  l2_hw_origin.txt  l2_hw_report_daily.txt  l2_report.txt  l2_tutorial_report.txt  l3.json  l3_china_area_latest.txt  l3_hw_china_area_latest.txt  l3_hw_china_latest.txt  l3_hw_oversea_area_latest.txt  (+104 more)
.ipynb_checkpoints/: test-checkpoint.md
csv_files/: 亚洲.csv  其他.csv  北美洲.csv  南美洲.csv  大洋洲.csv  欧洲.csv  非洲.csv
excel_files/: lesson6_hw.xlsx  report.xlsx  report_chart.xlsx  report_fixed.xlsx  report_formatted.xlsx  report_with_chart.xlsx  亚洲.xlsx  其他.xlsx  北美洲.xlsx  南美洲.xlsx  大洋洲.xlsx  欧洲.xlsx  非洲.xlsx
files/: conv_latest.xlsx  上海市.xlsx  云南省.xlsx  俄罗斯.xlsx  内蒙古自治区.xlsx  加拿大.xlsx  北京市.xlsx  印度.xlsx  台湾.xlsx  吉林省.xlsx  四川省.xlsx  埃及.xlsx  天津市.xlsx  宁夏回族自治区.xlsx  安徽省.xlsx  尼泊尔.xlsx  山东省.xlsx  山西省.xlsx  广东省.xlsx  广西壮族自治区.xlsx  德国.xlsx  意大利.xlsx  斯里兰卡.xlsx  新加坡.xlsx  新疆维吾尔自治区.xlsx  日本.xlsx  柬埔寨.xlsx  比利时.xlsx  江苏省.xlsx  江西省.xlsx  河北省.xlsx  河南省.xlsx  法国.xlsx  泰国.xlsx  浙江省.xlsx  海南省.xlsx  湖北省.xlsx  湖南省.xlsx  澳大利亚.xlsx  澳门.xlsx  (+20 more)
(+27 files in other folders)
