[tool.poetry]
name = "2020"
version = "0.1.0"
description = ""
authors = ["DeronLee <akagilnc@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
pandas = "^1.0.1"
openpyxl = "^3.0.3"
matplotlib = "^3.1.3"
bokeh = "^1.4.0"
selenium = "^3.141.0"
akshare = "^0.4.43"
streamlit = "^0.57.3"
jupyterthemes = "^0.20.0"
folium = "^0.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
